# kraya-agent

backend/: .gitignore  langgraph.json  main.py  pyproject.toml
backend/.langgraph_api/: .langgraph_ops.pckl
backend/api/: conversations.py  routes.py
backend/core/: agents.py  auth.py  config.py  db_setup.py  graph.py  mcp.json  mcp_client.py  nodes.py  rag.py  research_agent.py  router.py  schemas.py  studio.py  tools.py
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthModal.tsx  ChatInput.tsx  ChatPage.tsx  ErrorBanner.tsx  Header.tsx  MessageBubble.tsx  MessageList.tsx  Sidebar.tsx
frontend/hooks/: useChat.ts  useConversationQueries.ts
frontend/lib/: api.ts  auth-client.ts  auth.ts
frontend/prisma/: schema.prisma
frontend/providers/: AuthProvider.tsx  QueryProvider.tsx
frontend/types/: chat.ts
