[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-qdrant>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.1",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langgraph-cli[inmem]>=0.4.17",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "tavily-python>=0.7.24",
    "uvicorn[standard]>=0.41.0",
]
